--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 body {
+  background-color: #282c34;
+  color: #fff;
+  padding: 10px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
